--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -27,6 +27,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Prepare
+        run: echo "date_tag=$(date +%Y%m%d)" >> $GITHUB_ENV
+      -
         name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -36,3 +39,4 @@ jobs:
           push: true
           tags: |
             pgils/python-swiftclient:latest
+            pgils/python-swiftclient:${{ env.date_tag }}
