Revert "workflows/dockerbuild: run scheduled"
This reverts commit 619749c14de3c9611804ed2bb2c6cbf0008c2b4e.

--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -2,10 +2,7 @@ name: ci
 
 on:
   push:
-    branches:
-    - main
-  schedule:
-    - cron: '0 10 * * 0' # every sunday at 10am
+    branches: main
 
 jobs:
   multi:
