workflows/dockerbuild: tag as python-swiftclient version

--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -11,6 +11,15 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+      -
+        name: Get and tag version
+        id: tag
+        uses: salsify/action-detect-and-tag-new-version@v2
+        with:
+          version-command: |
+            grep -oP "(?<=^python-swiftclient==)[0-9\.]*$" requirements.txt
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -33,3 +42,4 @@ jobs:
           push: true
           tags: |
             pgils/python-swiftclient:latest
+            pgils/python-swiftclient:${{ steps.tag.outputs.current-version }}
